# langchain-unstructured

./: README.md
.github/: dependabot.yml
.github/scripts/: check_diff.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
libs/unstructured/: .gitattributes  README.md  pyproject.toml  unstructured_pdfloader.ipynb
libs/unstructured/langchain_unstructured/: __init__.py  chm.py  csv.py  document_loaders.py  email.py  epub.py  excel.py  html.py  image.py  markdown.py  odt.py  org_mode.py  pdf.py  powerpoint.py  rst.py  rtf.py  tsv.py  unstructured.py  url.py  word_document.py  xml.py
libs/unstructured/langchain_unstructured/document_loaders/: __init__.py  csv_loader.py  main.py  pdf.py
libs/unstructured/langchain_unstructured/parsers/: __init__.py  _chm.py  core.py  csv.py  email.py  epub.py  excel.py  html.py  image.py  markdown.py  odt.py  org_mode.py  pdf.py  powerpoint.py  rst.py  rtf.py  tsv.py  unstructured.py  word_document.py  xml.py
libs/unstructured/tests/examples/: README.doc  README.docx  README.html  README.md  README.org  README.pptx  README.rst  STEM.chm  factbook.xml  fake-email-attachment.eml  fake.odt  fake.rtf  hello.msg  stanley-cups.csv  stanley-cups.tsv  stanley-cups.xlsx  whatsapp_chat.txt
libs/unstructured/tests/integration_tests/: XXtest_parser.py_x  test_csv.py  test_csv_loader.py  test_document_loaders.py  test_email.py  test_epub.py  test_excel.py  test_html.py  test_image.py  test_markdown.py  test_odt.py  test_org_mode.py  test_powerpoint.py  test_rst.py  test_rtf.py  test_tsv.py  test_unstructured.py  test_url.py  test_word_document.py  test_xml.py
libs/unstructured/tests/integration_tests/parsers/: test_csv.py  test_email.py  test_epub.py  test_excel.py  test_html.py  test_image.py  test_markdown.py  test_odt.py  test_org_mode.py  test_powerpoint.py  test_rst.py  test_rtf.py  test_tsv.py  test_unstructured.py  test_word_document.py  test_xml.py
libs/unstructured/tests/unit_tests/: test_document_loaders.py  test_imports.py
