[project]
name = "langchain-unstructured"
requires-python = ">=3.9,<4.0"
version = "0.1.7"
description = "An integration package connecting Unstructured and LangChain"
authors = []
readme = "README.md"
license = "MIT"
dependencies = [
    "langchain-core>=0.3.40",
    "langchain-community>=0.3.18",
    "markdownify>=1.0",
]

[project.urls]
homepage = "https://github.com/langchain-ai/langchain-unstructured/"
repository = "https://github.com/langchain-ai/langchain-unstructured/"
documentation = "https://github.com/langchain-ai/langchain-unstructured/"
"Bug Tracker" = "https://github.com/langchain-ai/langchain-unstructured/issues"
"Source Code" = "https://github.com/langchain-ai/langchain-unstructured/"
"Release Notes" = "https://github.com/langchain-ai/langchain-unstructured/releases"

[project.optional-dependencies]
all_docs = ["unstructured[all_docs] (>=0.16.23)"]
csv = ["unstructured[csv] (>=0.16.23)"]
doc = ["unstructured[doc] (>=0.16.23)"]
docx = ["unstructured[docx] (>=0.16.23)"]
epub = ["unstructured[epub] (>=0.16.23)"]
image = ["unstructured[image] (>=0.16.23)"]
md = ["unstructured[md] (>=0.16.23)"]
odt = ["unstructured[odt] (>=0.16.23)"]
org = ["unstructured[org] (>=0.16.23)"]
pdf = ["unstructured[pdf] (>=0.16.23)"]
ppt = ["unstructured[ppt] (>=0.16.23)"]
pptx = ["unstructured[pptx] (>=0.16.23)"]
rtf = ["unstructured[rtf] (>=0.16.23)"]
tsv = ["unstructured[tsv] (>=0.16.23)"]
xlsx = ["unstructured[xlsx] (>=0.16.23)"]
huggingface = ["unstructured[huggingface] (>=0.16.23)"]
local-inference = ["unstructured[local-inference] (>=0.16.23)"]
paddleocr = ["unstructured[paddleocre] (>=0.16.23)"]
client = ["unstructured-client>=0.30.5,<1"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-socket = "^0.7.0"
requests-mock = "<2.0.0,>=1.11.0"
# TODO: hack to fix 3.9 builds
cffi = [{ version = "<1.17.1", python = "<3.10" }, { version = "*", python = ">=3.10" }]
langchain-core = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core"}
langchain-community = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/community"}

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"
# TODO: hack to fix 3.9 builds
cffi = [{ version = "<1.17.1", python = "<3.10" }, { version = "*", python = ">=3.10" }]

[tool.poetry.group.typing.dependencies]
mypy = "^1.7.1"
#unstructured = { version = "^0.16.23", extras = ["all-docs"] }
langchain-core = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core"}
langchain-community = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/community"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
langchain-community = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/community" }

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--strict-markers --strict-config --durations=5"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
    "local: mark tests as requiring a local install, which isn't compatible with CI currently",
]
asyncio_mode = "auto"

